--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,9 +13,26 @@
     <color name="bgBoxColor">#ffffff</color>
     <color name="primaryAppColor">#376db6</color>
     <color name="bottomItemTintColor">#353131</color>
+    <color name="boxTextColor">#353131</color>
+    <color name="boxHoverColor">#376db6</color>
+    <color name="errorBoxColor">#F44336</color>
+    <color name="dialogBgColorInfo">#2546ABEB</color>
+    <color name="feedbackBoxBgColor">#BEBEBE</color>
+
+
+    <!--    Not Modify Color Theme -->
+    <color name="swipeSchemeColor">#376db6</color>
+    <color name="swipeSchemeDarkColor">#74A0EE</color>
+    <color name="swipeBgColor">#ffffff</color>
+    <color name="swipeBgDarkColor">#121212</color>
+    <color name="navigationIconColor">#353131</color>
+    <color name="navigationIconDarkColor">#74A0EE</color>
 
 
     <!--Toast Color Background and text Color-->
     <color name="toastBackgroundColor">@android:color/black</color>
     <color name="toastTextColor">#D6D1D1</color>
+    <!--    Divider color-->
+
+    <color name="divider">#E6E6E6</color>
 </resources>
