Aded filter and serach option completly

--- a/app/src/main/res/layout/layout_system_info.xml
+++ b/app/src/main/res/layout/layout_system_info.xml
@@ -395,7 +395,8 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:onClick="@{() -> dialog.dismiss()}"
-                    app:srcCompat="@drawable/ic_close_window"                    tools:ignore="ContentDescription,RtlHardcoded"
+                    app:srcCompat="@drawable/ic_close_window"
+                    tools:ignore="ContentDescription,RtlHardcoded"
                     app:tint="?attr/colorAccent" />
             </FrameLayout>
         </ScrollView>
