--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
             android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="@{viewmodel.hideProgress ? View.GONE :View.VISIBLE }"
             android:layout_marginBottom="?attr/actionBarSize"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -91,7 +92,8 @@
             android:layout_width="@dimen/progress_circular_dimension"
             android:layout_height="@dimen/progress_circular_dimension"
             android:layout_gravity="center"
-            android:indeterminate="true"/>
+            android:indeterminate="true"
+            android:visibility="@{viewmodel.hideProgress ? View.VISIBLE :View.GONE }" />
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
