--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sudoajay.uninstaller.activity.scrolling.ScrollingActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_applicationSetting"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_applicationSetting"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_openAppInGooglePlayStore"
+        android:orderInCategory="100"
+        android:title="@string/action_openAppInGooglePlayStore"
         app:showAsAction="never" />
 </menu>
