Added Splash screen

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,7 @@
 
 <!--    Alert dialog-->
     <dimen name="alert_dialog_message_size">14sp</dimen>
+
+<!--    Splash Screen-->
+    <dimen name="image_header_dimen">100dp</dimen>
 </resources>
