--- a/app/src/main/res/layout/layout_filter_app_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_filter_app_bottom_sheet.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="bottomSheet"
-            type="com.sudoajay.uninstaller.activity.main.database.FilterAppBottomSheet" />
+            type="com.sudoajay.uninstaller.activity.main.FilterAppBottomSheet" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
